[build-system]
requires = ["setuptools>=65", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "wrfplot/_version.py"
#version_scheme = 'python-simplified-semver'
#version_scheme = 'no-guess-dev'
#parentdir_prefix_version = "wrfplot-"


[project]
name = "wrfplot"
description = "Command line application to plot WRF model output data"
dynamic = ["version",]
authors = [{ name = "J Sundar", email = "wrf.guy@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
keywords = ["Scientific", "Engineering", "Atmospheric Science", "Weather Model", "Plotting", "Software Development", "Numerical Weather Prediction", "NWP"]
license = {text = "GPL3"}
classifiers = [
	"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: Implementation :: CPython",
]

dependencies = ['cartopy', 'xarray', 'matplotlib', 'wrf-python>=1.3', 'imageio', 'tqdm', 'netcdf4']

[project.scripts]
wrfplot = "wrfplot.wrfplot:main"

[project.urls]
"Bug Reports" = "https://github.com/wxguy/wrfplot/issues"
"Source" = "https://github.com/wxguy/wrfplot/"
"Homepage" = "https://github.com/wxguy/wrfplot/"
"Documentation" = "https://wrfplot.readthedocs.io"

[tool.setuptools]
# By default, include-package-data is true in pyproject.toml, so you do
# NOT have to specify this line.
include-package-data = true

[tool.setuptools.exclude-package-data]
wrfplot = [".gitattributes", "dist", "installer.iss", "test", "docs", "installer.nsi", "environment.yml", "installer.sh", "release_check_list.py", 
"wrfplot.egg-info", "dev", "install_env.txt", " __pycache__"]

#[tool.setuptools.package-data]
[tool.setuptools.packages.find]
where = ["wrfplot"]

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.pytest_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''
